--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
         <!--font-family-->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Rufina:400,700" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
         
         <!-- title of site -->
         <title>CarVilla</title>
@@ -54,6 +56,7 @@
 				                    <li class="scroll"><a href="#service">service</a></li>
 				                    <li class="scroll"><a href="#featured-cars">featured cars</a></li>
 				                    <li class="scroll"><a href="#new-cars">new cars</a></li>
+				                    <li class="scroll"><a href="#our-work">our works</a></li>
 				                    <li class="scroll"><a href="#brand">brands</a></li>
 				                    <li class="scroll"><a href="#contact">contact</a></li>
 				                </ul><!--/.nav -->
@@ -124,6 +127,64 @@
 
 		</section><!--/.service-->
 		<!--service end-->
+
+		<!-- About Us Section -->
+<section id="about-us" class="about-us">
+    <div class="container">
+		<div class="section-header">
+			<h2>About Us</h2>
+		</div><br><br>
+        <div class="about-us-content">
+            <div class="row">
+                <!-- Years of Experience -->
+                <div class="col-md-3">
+                    <div class="single-about-item text-center">
+                        <div class="single-about-icon">
+                            <i class="fas fa-clock fa-3x"></i>
+                        </div><br>
+                        <h2>Years of Experience</h2><br>
+                        <p>Over 10 years of expertise in vehicle modification.</p>
+                    </div>
+                </div>
+
+                <!-- Technicians & Workers -->
+                <div class="col-md-3">
+                    <div class="single-about-item text-center">
+                        <div class="single-about-icon">
+                            <i class="fas fa-users fa-3x"></i>
+                        </div><br>
+                        <h2>Technicians & Workers</h2><br>
+                        <p>Skilled technicians and dedicated workers ensuring quality work.</p>
+                    </div>
+                </div>
+
+                <!-- Satisfied Customers -->
+                <div class="col-md-3">
+                    <div class="single-about-item text-center">
+                        <div class="single-about-icon">
+                            <i class="fas fa-smile fa-3x"></i>
+                        </div><br>
+                        <h2>Satisfied Customers</h2><br>
+                        <p>Thousands of satisfied customers who trust our services.</p>
+                    </div>
+                </div>
+
+                <!-- Vehicles Modified -->
+                <div class="col-md-3">
+                    <div class="single-about-item text-center">
+                        <div class="single-about-icon">
+                            <i class="fas fa-car fa-3x"></i>
+                        </div><br>
+                        <h2>Vehicles Modified</h2><br>
+                        <p>We have successfully modified a wide range of vehicles.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 		<!--new-cars start -->
 		<section id="new-cars" class="new-cars">
@@ -425,6 +486,115 @@
 
 		</section><!--/.featured-cars-->
 		<!--featured-cars end -->
+
+		<!--our-work start -->
+		<section id="our-work" class="featured-cars">
+			<div class="container">
+				<div class="section-header">
+					<p>Luxury <span>Cars</span> Products</p>
+					<h2>Our Works</h2>
+				</div><!--/.section-header-->
+				<div class="featured-cars-content">
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<div class="single-featured-cars">
+								<div class="featured-img-box">
+									<div class="featured-cars-img">
+										<img src="images/out-works/alloy-wheel.jpg">
+									</div>
+								</div>
+								<div class="featured-cars-txt">
+									<h2><a>Alloy Wheels</a></h2>									
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<div class="single-featured-cars">
+								<div class="featured-img-box">
+									<div class="featured-cars-img">
+										<img src="images/out-works/body kit upgrade.jpg" alt="cars">
+									</div>
+								</div>
+								<div class="featured-cars-txt">
+									<h2><a>body kit upgrade</a></h2>									
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<div class="single-featured-cars">
+								<div class="featured-img-box">
+									<div class="featured-cars-img">
+										<img src="images/out-works/Car Accessory.jpg" alt="cars">
+									</div>
+								</div>
+								<div class="featured-cars-txt">
+									<h2><a>Car Accessory</a></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<div class="single-featured-cars">
+								<div class="featured-img-box">
+									<div class="featured-cars-img">
+										<img src="images/out-works/car exhaust system.jpg" alt="cars">
+									</div>
+								</div>
+								<div class="featured-cars-txt">
+									<h2><a>car exhaust system</a></h2>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<div class="single-featured-cars">
+								<div class="featured-img-box">
+									<div class="featured-cars-img">
+										<img src="images/out-works/headlamps and taillapms.jpg" alt="cars">
+									</div>
+								</div>
+								<div class="featured-cars-txt">
+									<h2><a>Headlamps And Taillamps</a></h2>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<div class="single-featured-cars">
+								<div class="featured-img-box">
+									<div class="featured-cars-img">
+										<img src="images/out-works/Performance & Carbon Parts.jpg" alt="cars">
+									</div>
+								</div>
+								<div class="featured-cars-txt">
+									<h2><a>Performance & Carbon Parts</a></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><!--/.container-->
+
+		</section><!--/.our-work-->
+		<!--our-work end -->	
+
+		<!-- model card popup -->
+		<div class="modal fade" id="workModal" tabindex="-1" role="dialog" aria-labelledby="workModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="workModalLabel">Work Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="workDetails"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+		<!-- end of model card popup -->
 
 		<!-- clients-say strat -->
 		<section id="clients-say"  class="clients-say">
@@ -808,6 +978,8 @@
 						</div>
 					</div>
 				</div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119981.26823429327!2d73.72090636346745!3d19.991105261769533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bddd290b09914b3%3A0xcb07845d9d28215c!2sNashik%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1709733054809!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 				<div class="footer-copyright">
 					<div class="row">
 						<div class="col-sm-6">
@@ -860,7 +1032,66 @@
         <script src="js/owl.carousel.min.js"></script>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
+		<script>
+			function openWorkModal(title, imageUrl, details) {
+        document.getElementById('workModalLabel').innerHTML = title;
+        document.getElementById('workDetails').innerHTML = `
+            <div class="modal-body full-height">
+                <div class="container-fluid full-height">
+                    <div class="row full-height">
+                        <div class="col-md-6 full-height">
+                            <img src="${imageUrl}" alt="${title}" class="img-fluid full-height">
+                        </div>
+                        <div class="col-md-6 full-height">
+                            <p>${details}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        `;
+        $('#workModal').modal('show');
+    }
+		
+			document.addEventListener('DOMContentLoaded', function () {
+				const workCards = document.querySelectorAll('.single-featured-cars');
+		
+				workCards.forEach(card => {
+					card.addEventListener('click', function () {
+						const title = this.querySelector('.featured-cars-txt h2 a').innerText;
+						const imageUrl = this.querySelector('.featured-cars-img img').src;
+						let details;
+		
+						switch (title) {
+							case 'Alloy Wheels':
+								details = 'Alloy wheels are made from a combination of aluminum and other metals, providing improved strength and aesthetics. They enhance the overall look of a car while offering better heat dissipation and reduced weight.';
+								break;
+							case 'Body Kit Upgrade':
+								details = 'Enhance the appearance and performance of your car with a body kit upgrade. It includes aerodynamic components and visual enhancements.';
+								break;
+							case 'Car Accessory':
+								details = 'Explore a variety of car accessories to customize your vehicle. From interior gadgets to exterior enhancements, find accessories that suit your style and preferences.';
+								break;
+							case 'Car Exhaust System':
+								details = 'Upgrade your car\'s exhaust system for improved performance and sound. High-quality exhaust systems enhance engine efficiency and provide a distinctive exhaust note.';
+								break;
+							case 'Headlamps And Taillamps':
+								details = 'Upgrade your car\'s lighting with advanced headlamps and taillamps. Improve visibility and safety while enhancing the overall aesthetics of your vehicle.';
+								break;
+							case 'Performance & Carbon Parts':
+								details = 'Boost your car\'s performance with carbon parts. Lightweight and durable, carbon fiber components enhance speed and aerodynamics, contributing to an exhilarating driving experience.';
+								break;
+							default:
+								details = 'Add your detailed description here.';
+						}
+		
+						openWorkModal(title, imageUrl, details);
+					});
+				});
+			});
+		</script>
+		
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		
         <!--Custom JS-->
         <script src="js/custom.js"></script>
         
