--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,38 +1,69 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Admin Panel</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Admin Panel</title>
+    <style>
+      .card {
+          background-color: #f8f9fa;
+          border: 1px solid #dee2e6;
+          border-radius: 10px;
+          margin-bottom: 20px;
+      }
+
+      .card-header {
+          background-color: #007bff;
+          color: white;
+          border-bottom: none;
+          border-radius: 10px 10px 0 0;
+      }
+
+      .card-body {
+          color: #343a40;
+      }
+
+      .card-footer {
+          background-color: #f8f9fa;
+          border-top: none;
+          border-radius: 0 0 10px 10px;
+      }
+  </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
         <a class="navbar-brand" href="#">Carvilla</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="home.html">Form</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="admin.html">Admin panel</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="home.html">Form</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="admin.html">Admin panel</a>
+                </li>
+            </ul>
         </div>
-      </nav>
+    </div>
+</nav>
+
 
     <div class="container2">
-        <h1>Admin Panel</h1>
-        <div class="container1" id="loginForm" style="display: block;">
+        <center><h1>Admin Panel</h1></center>
+        <div class="container" id="loginForm" style="display: block;">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" class="form-control" id="username" name="username" required>
@@ -43,25 +74,12 @@
             </div>
             <button type="submit" class="btn btn-primary" onclick="attemptLogin()">LOGIN</button>
         </div>
-        <div>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Customer Name</th>
-                        <th>Phone Number</th>
-                        <th>Email</th>
-                        <th>Car Model</th>
-                        <th>Car Number</th>
-                        <th>Modifications</th>
-                    </tr>
-                </thead>
-                <tbody id="adminContent" class="display" style="display: table-row-group;">
-
-                </tbody>
-            </table>
-        </div>
+        <div class="card-group" id="adminContent"></div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/admin.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
